--- a/starter.html
+++ b/starter.html
@@ -8,7 +8,9 @@
     	<style>
 	body {
 		background: #eeeeee;
-		font-family: tahoma, verdana, sans-serif;
+		font-family: sans-serif;
+        display: flex;
+        flex-direction: row;
 	}
 
 	canvas {
@@ -21,6 +23,8 @@
 	#controls{
 		margin-left:10px;
 		margin-top:10px;
+        border: 2px solid black;
+        padding: 5px;
   }
 
   section{
@@ -30,6 +34,8 @@
   #playButton{
   	font-size: 1.2em;
   	width: 3.5em;
+    background-color: pink;
+      border: none;
   }
 
 	button[data-playing="yes"]:after{
