--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -5,19 +5,38 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    	<style>
-	body {
+    <style>
+        html{
+            height: 100%;
+        }
+        body {
 		background: #eeeeee;
 		font-family: sans-serif;
         display: flex;
         flex-direction: row;
+        width: 100%;
 	}
+    #grid-container{
+        display: grid;
+        height: 100vh;
+        grid-template-columns: .5fr 1fr .5fr;
+        grid-template-rows: .5fr 1fr .5fr;
+        }
+
+    #container{
+        grid-row: 2/3;
+        grid-column: 2/3;
+        display: flex;
+        flex-direction: row;
+
+    }
 
 	canvas {
-		margin-left:10px;
-		margin-top:10px;
+		/*margin-left:10px;
+		margin-top:10px; */
 		box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
 		background: black;
+        max-width: 100%;
 	}
 
 	#controls{
@@ -51,8 +70,8 @@
   	width: 6em;
   }
 	</style>
-	<script>
-		"use strict";
+    <script>
+        "use strict";
 
 		window.onload = init;
 
@@ -235,29 +254,33 @@
 </head>
 
 <body>
-    <canvas width="640" height="400"></canvas>
-    <div id="controls">
-        <audio></audio>
-        <section>
-            <label>Track:
-			<select id="trackSelect">
-				<option value="media/New Adventure Theme.mp3">New Adventure Theme</option>
-				<option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
-				<option value="media/The Picard Song.mp3" selected>The Picard Song</option>
-			</select>
-		</label>
-            <button id="playButton" data-playing="no"></button>
-            <button id="fsButton">Full Screen</button>
-        </section>
-        <section>
-            Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
-            <span id="volumeLabel">???</span>
-        </section>
+    <div id="grid-container">
+        <div id="container">
+            <canvas width="640" height="400"></canvas>
+            <div id="controls">
+                <audio>controls</audio>
+                <section>
+                    <label>Track:
+                        <select id="trackSelect">
+                            <option value="media/New Adventure Theme.mp3">New Adventure Theme</option>
+                            <option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
+                            <option value="media/The Picard Song.mp3" selected>The Picard Song</option>
+                        </select>
+                    </label>
+                    <button id="playButton" data-playing="no"></button>
+                    <button id="fsButton">Full Screen</button>
+                </section>
+                <section>
+                    Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
+                    <span id="volumeLabel">???</span>
+                </section>
 
-        <section>
-            Radius: <input type="range" id="radiusSlider" min="50" max="400" value="1" step="1">
-            <span id="radiusLabel">???</span>
-        </section>
+                <section>
+                    Radius: <input type="range" id="radiusSlider" min="50" max="400" value="1" step="1">
+                    <span id="radiusLabel">???</span>
+                </section>
+            </div>
+        </div>
     </div>
 </body>
 
