Added gradient to background

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -17,7 +17,8 @@
 		margin-left:10px;
 		margin-top:10px;
 		box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
-		background: lightblue;
+		background: #65AFE8;
+        background-image: linear-gradient(#4F88B5, #65AFE8);
 	}
 
 	#controls{
