Forgot to add closepath

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -266,6 +266,7 @@
             drawCtx.lineTo(0, 450);
             drawCtx.stroke();
             drawCtx.fill();
+            drawCtx.closePath();
         }
 
     </script>
