Fixed audio file location

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -61,9 +61,9 @@
 
 		// 1- here we are faking an enumeration - we'll look at another way to do this soon
 		const SOUND_PATH = Object.freeze({
-			sound1: "media/New Adventure Theme.mp3",
-			sound2: "media/Peanuts Theme.mp3",
-			sound3:  "media/The Picard Song.mp3"
+			sound1: "testAudio/New Adventure Theme.mp3",
+			sound2: "testAudio/Peanuts Theme.mp3",
+			sound3:  "testAudio/The Picard Song.mp3"
 		});
 
 		// 2 - elements on the page
@@ -268,9 +268,9 @@
         <section>
             <label>Track:
 			<select id="trackSelect">
-				<option value="media/New Adventure Theme.mp3">New Adventure Theme</option>
-				<option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
-				<option value="media/The Picard Song.mp3" selected>The Picard Song</option>
+				<option value="testAudio/New Adventure Theme.mp3">New Adventure Theme</option>
+				<option value="testAudio/Peanuts Theme.mp3">Peanuts Theme</option>
+				<option value="testAudio/The Picard Song.mp3" selected>The Picard Song</option>
 			</select>
 		</label>
             <button id="playButton" data-playing="no"></button>
