--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -148,6 +148,12 @@
 		}
 
 		function setupUI(){
+            /*
+            3 sliders: Volume, Reverb, Brightness
+            3 checkboxes: invert, sepia, noise
+            radio: different pride flags
+            Button: make it gay
+            */
 			playButton = document.querySelector("#playButton");
 			playButton.onclick = e => {
 				console.log(`audioCtx.state = ${audioCtx.state}`);
@@ -269,6 +275,8 @@
             <canvas width="750" height="550"></canvas>
             <div id="controls">
                 <audio></audio>
+
+                 <!-- CHOOSE AUDIO-->
                 <section>
                     <label>Track:
                         <select id="trackSelect">
@@ -277,18 +285,22 @@
                             <option value="testAudio/The Picard Song.mp3" selected>The Picard Song</option>
                         </select>
                     </label>
+                    <!--PLAY BUTTON-->
                     <button id="playButton" data-playing="no"></button>
+                    <!--FULL SCREEN-->
                     <button id="fsButton">Full Screen</button>
                 </section>
+
+                <!--VOLUME SLIDER-->
                 <section>
                     Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
                     <span id="volumeLabel">???</span>
                 </section>
 
-                <section>
-                    Radius: <input type="range" id="radiusSlider" min="50" max="400" value="1" step="1">
-                    <span id="radiusLabel">???</span>
-                </section>
+<section>
+    Radius: <input type="range" id="radiusSlider" min="50" max="400" value="1" step="1">
+    <span id="radiusLabel">???</span>
+</section>
             </div>
         </div>
     </div>
