--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -7,53 +7,6 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Egg Beater</title>
 
-    <!--    <style>
-        body {
-		background: #eeeeee;
-		font-family: sans-serif;
-        display: flex;
-        flex-direction: row;
-	}
-
-	canvas {
-		margin-left:10px;
-		margin-top:10px;
-		box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
-		background: #65AFE8;
-        background-image: linear-gradient(#4F88B5, #65AFE8);
-	}
-
-	#controls{
-		margin-left:10px;
-		margin-top:10px;
-        border: 2px solid black;
-        padding: 5px;
-  }
-
-  section{
-  	margin-bottom:1em;
-  }
-
-  #playButton{
-  	font-size: 1.2em;
-  	width: 3.5em;
-    background-color: pink;
-      border: none;
-  }
-
-	button[data-playing="yes"]:after{
-		content: "Pause";
-	}
-
-	button[data-playing="no"]:after{
-		content: "Play";
-	}
-
-	#fsButton{
-  	font-size: 1.2em;
-  	width: 6em;
-  }
-	</style>-->
     <script>
         "use strict";
 
@@ -68,30 +21,21 @@
 			sound3:  "testAudio/The Picard Song.mp3"
 		});
 
-		// 2 - elements on the page
-		let audioElement,canvasElement;
-
-		// UI
-		let playButton;
-
-		// 3 - our canvas drawing context
-		let drawCtx;
-
-		// 4 - our WebAudio context
-		let audioCtx;
-
-		// 5 - nodes that are part of our WebAudio audio routing graph
-		let sourceNode, analyserNode, gainNode;
-
-		// 6 - a typed array to hold the audio frequency data
-		const NUM_SAMPLES = 256;
-		// create a new array of 8-bit integers (0-255)
-		let audioData = new Uint8Array(NUM_SAMPLES/2);
-
-		let maxRadius = 200;
+		 //Canvas variables
+        let canvasElement, drawCtx;
+        //Audio variables
+        let audioElement, audioCtx;
+        //node variables
+        let sourceNode, analyserNode, gainNode;
+        //array to hold audio frequency data
+        const NUM_SAMPLES = 256;
+        //array of 8-bit int (0-255)
+        let audioData = new Uint8Array(NUM_SAMPLES / 2);
+        //UI variables
+        let playButton;
 
 		//these help with pixel effects
-		let invert = true, tintRed = false, noise = true, sepia = true;
+		let invert = false, noise = false, sepia = false;
 
         let rooster = new Image();
         rooster.src = 'images/martha.png';
@@ -120,14 +64,6 @@
 			// 4 - create an analyser node
 			analyserNode = audioCtx.createAnalyser();
 
-			/*
-			We will request NUM_SAMPLES number of samples or "bins" spaced equally
-			across the sound spectrum.
-
-			If NUM_SAMPLES (fftSize) is 256, then the first bin is 0 Hz, the second is 172 Hz,
-			the third is 344Hz. Each bin contains a number between 0-255 representing
-			the amplitude of that frequency.
-			*/
 
 			// fft stands for Fast Fourier Transform
 			analyserNode.fftSize = NUM_SAMPLES;
@@ -154,6 +90,8 @@
             radio: different pride flags
             Button: make it gay
             */
+
+            //PLAY BUTTON
 			playButton = document.querySelector("#playButton");
 			playButton.onclick = e => {
 				console.log(`audioCtx.state = ${audioCtx.state}`);
@@ -174,6 +112,24 @@
 
 			};
 
+            //FULL SCREEN BUTTON
+            document.querySelector("#fsButton").onclick = _ =>{
+            requestFullscreen(canvasElement);
+			};
+
+            //AUDIO TRACK SELECTOR
+            document.querySelector("#trackSelect").onchange = e =>{
+            audioElement.src = e.target.value;
+            // pause the current track if it is playing
+            playButton.dispatchEvent(new MouseEvent("click"));
+			};
+
+			// if track ends
+			audioElement.onended =  _ => {
+				playButton.dataset.playing = "no";
+			};
+
+            //VOLUME SLIDER
 			let volumeSlider = document.querySelector("#volumeSlider");
 			volumeSlider.oninput = e => {
 				gainNode.gain.value = e.target.value;
@@ -181,29 +137,32 @@
 			};
 			volumeSlider.dispatchEvent(new InputEvent("input"));
 
-			let radiusSlider = document.querySelector("#radiusSlider");
-			radiusSlider.oninput = e => {
-				maxRadius = e.target.value;
-				radiusLabel.innerHTML = maxRadius;
-			};
-			radiusSlider.dispatchEvent(new InputEvent("input"));
+            //CHECKBOX ACTIVATION
+            document.getElementById('invert').onchange = function(e){
+                if(e.target.checked){
+                    invert = true;
+                }
+                else{
+                    invert = false;
+                }
+            }
+            document.getElementById('noise').onchange = function(e){
+                if(e.target.checked){
+                    noise = true;
+                }
+                else{
+                    noise = false;
+                }
+            }
+            document.getElementById('sepia').onchange = function(e){
+                if(e.target.checked){
+                    sepia = true;
+                }
+                else{
+                    sepia = false;
+                }
+            }
 
-
-			document.querySelector("#trackSelect").onchange = e =>{
-				audioElement.src = e.target.value;
-				// pause the current track if it is playing
-				playButton.dispatchEvent(new MouseEvent("click"));
-			};
-
-
-			// if track ends
-			audioElement.onended =  _ => {
-				playButton.dataset.playing = "no";
-			};
-
-			document.querySelector("#fsButton").onclick = _ =>{
-				requestFullscreen(canvasElement);
-			};
 
 		}
 
@@ -211,23 +170,12 @@
 			// this schedules a call to the update() method in 1/60 seconds
 			requestAnimationFrame(update);
 
-			/*
-				Nyquist Theorem
-				http://whatis.techtarget.com/definition/Nyquist-Theorem
-				The array of data we get back is 1/2 the size of the sample rate
-			*/
-
 			// populate the audioData with the frequency data
 			// notice these arrays are passed "by reference"
 			analyserNode.getByteFrequencyData(audioData);
 
-			// OR
-			//analyserNode.getByteTimeDomainData(audioData); // waveform data
-
 			// DRAW!
 			drawCtx.clearRect(0,0,800,600);
-
-            //hills();
 
             drawCtx.drawImage(rooster, canvasElement.width - 150, canvasElement.height - 150, 150, 150);
 
@@ -247,7 +195,7 @@
                 drawCtx.closePath();
                 drawCtx.restore();
             }
-
+manipulatePixels(drawCtx);
 		}
 
 
@@ -266,6 +214,45 @@
 			// .. and do nothing if the method is not supported
 		};
 
+        function manipulatePixels(ctx){
+             //get all rgba pixel data of the canvas by grabbing the ImageData Object
+            let imageData = ctx.getImageData(0, 0, ctx.canvas.width, ctx.canvas.height);
+
+            //imageData.data is an 8-bit typed array - values range from 0-255
+            //imageData.data contains 4 values per pixel: 4 x canvas.width x canvas.height = 1,024,00 values
+            let data = imageData.data;
+            let length = data.length;
+            let width = imageData.width;
+
+            for(let i = 0; i < length; i += 4){
+                //invert
+                if(invert){
+                    let red = data[i], green = data[i+1], blue = data[i+2];
+                    data[i] = 255 - red; //set red value
+                    data[i+1] = 255 - green; //set blue;
+                    data[i+2] = 255 - blue; //set green
+                }
+
+                //noise
+                if(noise && Math.random() < .10){
+                    data[i] = data[i + 1] = data [i+2] = 128; //gray noise
+                    //data[i] = data[i + 1] = data [i+2] = 255; //white
+                    //data[i] = data[i + 1] = data [i+2] = 0; //black
+                    data[i + 3] = 255; //alpha
+
+                }
+
+                //sepia
+                if(sepia){
+                   data[i] = (data[i] * .393) + (data[i + 1] * .769) + (data[i+2] * .189);
+                   data[i+1] = (data[i] * .349) + (data[i + 1] * .686) + (data[i+2] * .168);
+                   data[i+2] = (data[i] * .272) + (data[i + 1] * .534) + (data[i+2] * .131);
+                }
+            }
+            //put motified data back on the canvas
+            ctx.putImageData(imageData, 0, 0);
+        }
+
     </script>
 </head>
 
@@ -276,7 +263,7 @@
             <div id="controls">
                 <audio></audio>
 
-                 <!-- CHOOSE AUDIO-->
+                <!-- CHOOSE AUDIO-->
                 <section>
                     <label>Track:
                         <select id="trackSelect">
@@ -285,22 +272,66 @@
                             <option value="testAudio/The Picard Song.mp3" selected>The Picard Song</option>
                         </select>
                     </label>
+
                     <!--PLAY BUTTON-->
                     <button id="playButton" data-playing="no"></button>
                     <!--FULL SCREEN-->
                     <button id="fsButton">Full Screen</button>
                 </section>
 
+                <!--SLIDERS-->
+
                 <!--VOLUME SLIDER-->
-                <section>
+                <section class="sliders">
                     Volume: <input type="range" id="volumeSlider" min="0" max="2" value="1" step="0.01">
                     <span id="volumeLabel">???</span>
                 </section>
+                <!--REVERB SLIDER-->
+                <section class="sliders">
+                    Reverb: <input type="range" id="reverbSlider" min="0" max="1" value="0" step="0.01"> <span id="reverbLabel">???</span>
+                </section>
+                <!--BRIGHTNESS SLIDER-->
+                <section class="sliders">
+                    Brightness: <input type="range" id="reverbSlider" min="0" max="1" value="0" step="0.01"> <span id="reverbLabel">???</span>
+                </section>
 
-<section>
-    Radius: <input type="range" id="radiusSlider" min="50" max="400" value="1" step="1">
-    <span id="radiusLabel">???</span>
-</section>
+                <!--CHECKBOXES-->
+
+                <!--INVERT-->
+                <section class="checkbox">
+                    Invert: <input type="checkbox" id="invert">
+                </section>
+                <!--SEPIA-->
+                <section class="checkbox">
+                    Sepia: <input type="checkbox" id="sepia">
+                </section>
+                <!--NOISE-->
+                <section>
+                    Noise: <input type="checkbox" id="noise">
+                </section>
+
+                <!--RADIO BUTTONS-->
+
+                <!--GAY-->
+                <section class="radio">
+                    Gay: <input type="radio" name="pride" value="pan">
+                </section>
+                <!--LESBIAN-->
+                <section class="radio">
+                    Lesbian: <input type="radio" name="pride" value="pan">
+                </section>
+                <!--BI-->
+                <section class="radio">
+                    Bisexual: <input type="radio" name="pride" value="bi">
+                </section>
+                <!--PAN-->
+                <section class="radio">
+                    Pansexual: <input type="radio" name="pride" value="pan">
+                </section>
+                <!--ACE-->
+                <section class="radio">
+                    Asexual: <input type="radio" name="pride" value="pan">
+                </section>
             </div>
         </div>
     </div>
