make it gay button

--- a/jinjin-starter.html
+++ b/jinjin-starter.html
@@ -332,6 +332,11 @@ manipulatePixels(drawCtx);
                 <section class="radio">
                     Asexual: <input type="radio" name="pride" value="pan">
                 </section>
+
+                <!--MAKE IT GAY-->
+                <section>
+                    <button>Make it Gay</button>
+                </section>
             </div>
         </div>
     </div>
