Added new songs

--- a/ella-starter.html
+++ b/ella-starter.html
@@ -61,9 +61,10 @@
 
         // 1- here we are faking an enumeration - we'll look at another way to do this soon
         const SOUND_PATH = Object.freeze({
-            sound1: "testAudio/New Adventure Theme.mp3",
-            sound2: "testAudio/Peanuts Theme.mp3",
-            sound3: "testAudio/The Picard Song.mp3"
+            sound1: "testAudio/bornThisWay.mp3",
+            sound2: "testAudio/chickenSong.mp3",
+            sound3: "testAudio/sicEmOnAChicken.mp3",
+            sound4: "testAudio/chickenFried.mp3"
         });
 
         // 2 - elements on the page
@@ -285,9 +286,10 @@
                 <section>
                     <label>Track:
                         <select id="trackSelect">
-                            <option value="testAudio/New Adventure Theme.mp3">New Adventure Theme</option>
-                            <option value="testAudio/Peanuts Theme.mp3">Peanuts Theme</option>
-                            <option value="testAudio/The Picard Song.mp3" selected>The Picard Song</option>
+                            <option value="testAudio/bornThisWay.mp3">Born This Way</option>
+                            <option value="testAudio/chickenSong.mp3">The Chicken Song</option>
+                            <option value="testAudio/sicEmOnAChicken.mp3" selected>Sic 'Em On A Chicken</option>
+                            <option value="testAudio/chickenFried.mp3" selected>Chicken Fried</option>
                         </select>
                     </label>
 
